refactor: use Kotlin-generated API client/model in airbyte-worker, workload-launcher and container-orchestrator (#12590)
Co-authored-by: jonsspaghetti <jon@airbyte.io>
Co-authored-by: Jimmy Ma <gosusnp@users.noreply.github.com>