@@ -10,10 +10,9 @@ import static io.airbyte.metrics.lib.ApmTraceConstants.Tags.JOB_ID_KEY;
 import static io.airbyte.metrics.lib.ApmTraceConstants.Tags.WORKSPACE_ID_KEY;
 
 import datadog.trace.api.Trace;
-import io.airbyte.api.client.AirbyteApiClient;
-import io.airbyte.api.client.invoker.generated.ApiException;
-import io.airbyte.api.client.model.generated.ConnectionIdRequestBody;
-import io.airbyte.api.client.model.generated.WorkspaceRead;
+import io.airbyte.api.client2.AirbyteApiClient;
+import io.airbyte.api.client2.model.generated.ConnectionIdRequestBody;
+import io.airbyte.api.client2.model.generated.WorkspaceRead;
 import io.airbyte.commons.temporal.config.WorkerMode;
 import io.airbyte.commons.temporal.exception.RetryableException;
 import io.airbyte.commons.temporal.scheduling.ConnectionUpdaterInput;
@@ -25,14 +24,15 @@ import io.micronaut.cache.annotation.Cacheable;
 import io.micronaut.context.annotation.Requires;
 import io.micronaut.http.HttpStatus;
 import jakarta.inject.Singleton;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
+import org.openapitools.client.infrastructure.ClientException;
 
 /**
  * Implementation of the {@link RecordMetricActivity} that is managed by the application framework
@@ -62,7 +62,7 @@ public class RecordMetricActivityImpl implements RecordMetricActivity {
     ApmTraceUtils.addTagsToTrace(generateTags(metricInput.getConnectionUpdaterInput()));
     final List<MetricAttribute> baseMetricAttributes = generateMetricAttributes(metricInput.getConnectionUpdaterInput());
     if (metricInput.getMetricAttributes() != null) {
-      baseMetricAttributes.addAll(Stream.of(metricInput.getMetricAttributes()).collect(Collectors.toList()));
+      baseMetricAttributes.addAll(Stream.of(metricInput.getMetricAttributes()).toList());
     }
     metricInput.getFailureCause().ifPresent(fc -> baseMetricAttributes.add(new MetricAttribute(MetricTags.FAILURE_CAUSE, fc.name())));
     metricClient.count(metricInput.getMetricName(), 1L, baseMetricAttributes.toArray(new MetricAttribute[] {}));
@@ -96,7 +96,7 @@ public class RecordMetricActivityImpl implements RecordMetricActivity {
    * @return The map of tags for instrumentation.
    */
   private Map<String, Object> generateTags(final ConnectionUpdaterInput connectionUpdaterInput) {
-    final Map<String, Object> tags = new HashMap();
+    final Map<String, Object> tags = new HashMap<>();
 
     if (connectionUpdaterInput != null) {
       if (connectionUpdaterInput.getConnectionId() != null) {
@@ -122,12 +122,14 @@ public class RecordMetricActivityImpl implements RecordMetricActivity {
     try {
       log.debug("Calling workspaceApi to fetch workspace ID for connection ID {}", connectionId);
       final WorkspaceRead workspaceRead =
-          airbyteApiClient.getWorkspaceApi().getWorkspaceByConnectionId(new ConnectionIdRequestBody().connectionId(connectionId));
+          airbyteApiClient.getWorkspaceApi().getWorkspaceByConnectionId(new ConnectionIdRequestBody(connectionId));
       return workspaceRead.getWorkspaceId().toString();
-    } catch (final ApiException e) {
-      if (e.getCode() == HttpStatus.NOT_FOUND.getCode()) {
+    } catch (final ClientException e) {
+      if (e.getStatusCode() == HttpStatus.NOT_FOUND.getCode()) {
         return null;
       }
+      throw new RetryableException(e);
+    } catch (final IOException e) {
       throw new RetryableException(e);
     }
   }
